2004-02-23  ujwal

	* Added support for setting cursor color.
	* Changed bold behavior by redrawing character offset by one pixel. 
	  Bold now works for all fonts.
	* Fixed config panel nibs.

2004-02-23  fabian

	* Fixed bug in [PTYTextView getCharImage].
	* Changed blinking behavior. No we no longer reverse fg/bg
	* Changed bold behavior. Bold now works for all fonts.
	
2004-02-22  ujwal

	* Making sure dirty flags are reset for a line after processing it.

2004-02-21  fabian

	* Fixed highlight color display
	* Now including color code in the hash function
	
2004-02-20  ujwal

	* Minor updates to selection stuff. Re-enabled "select all".
	* Added back print functionality. Removed "Print Selection". 
	  Handled by "Print".

2004-02-19  fabian

	* Now using srand() as hash function in hoping of less collision.
	* Fixed another cursor problem when dealing with double width characters.
	* Fixed a memory allocation bug that cause crashes.
	* Fixed some memory leaks in PTYTextView.
	
2004-02-19  ujwal

	* Forcing redraw when tabview is redrawn.
	* Fixed scrollbar problem.
	* Added back support for drag-drop into textview.
	* Added support for double and triple-click to select word and line.

2004-02-18  ujwal

	* Fixed scrollUp crash in PTYTextView: drawRect.

2004-02-18  fabian

	* Enhanced [PTYTextView drawRect] to use dirty array more efficiently.
	* fixed a bug in save/restoreBuffer in VT100Screen.
	* Optimized blinking
	* Unfinished work on Find functions
	* Proper init of PTYTextView fixed some weird crashes
	* Fixed some cursor problems related to wide characters.
	
2004-02-17  fabian

	* Fixed a bug in [VT100Screen eraseInDisplay].
	* Fixed a bug in [PTYTextView drawRect] when drawing underlines.
	* A slightly better hash algorithm for char image cache.
	
2004-02-17  ujwal

	* Added back support for background images. 
	* Some more optimizations in drawing code to draw only line rects that 
	  need drawing.

2004-02-16  ujwal
